# sendnotify

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  release-please-config.json
.github/: CODEOWNERS  dependabot.yml
.github/actions/notificar-slack/: action.yaml  notify.sh
.github/workflows/: deploy.yaml  release-please.yaml
.zap/: rules.tsv
artifacts/: 01-configmap.yaml  01-sendnotify-rbac.yaml  02-clusterRole.yaml  02-sendnotify-configmap.yaml  03-clusterRoleBinding.yaml  03-sendnotify-secret.yaml  04-deployment.yaml  04-sendnotify-service.yaml  05-sendnotify-deployment.yaml  05-service.yaml  06-sendnotify-ingress.yaml  06-serviceAccount.yaml  07-ingress.yaml  07-sendnotify-pdb.yaml  08-secret-auth.yaml
