[project]
name = "sendnotify"
version = "1.2.2"
description = "Webhook bridge multi-cloud - OCI, AWS, Azure - para Google Chat"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "Flask>=3.1",
    "requests>=2.32",
    "Flask-HTTPAuth>=4.8",
    "Flask-Limiter>=3.12",
    "gunicorn>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["build"]
include = ["providers*"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["build/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
